added .env , added more tests, and added a new route path for highlight videos
